# visualisierung-ws24-25

./: .gitignore  CMakeLists.txt  README.md
include/boilerplate/: application.h  application_base.h  pvm_volume.h
src/: application.cpp  application.h  application_base.cpp  application_base.h  main.cpp  pvm_volume.cpp  pvm_volume.h  webgpu.cpp
